test/invalid-syntax/54483_unclosed_string/unclosed_string.mag
-- Author: 54483, Pedro Barata

-- Lexing error: string literal is never closed

fun main (_) : Unit -> Unit =
  print("hello world)
